[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'testwiz'
description = "Automated test generation tool for any programming language"
requires-python = ">= 3.11"
version = "1.0.0"
dependencies = [
    "tree-sitter==0.21.3",
    'tree_sitter_languages==1.10.2',
    "tqdm",
    'grep_ast',
    'pygments==2.18.0',
    'networkx==3.3',
    'jinja2==3.1.4',
    'litellm==1.41.21',
    "numpy==2.0.0",
    "scipy==1.14.0",
]
keywords = ["test", "automation", "generation", "programming", "language"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Steven Jung" }]
maintainers = [{ name = "Steven Jung" }]

[project.optional-dependencies]
dev = ['isort', 'black']
testing = ['pytest']

[project.scripts]
testwiz = "testwiz.main:run"

[tool.setuptools.package-data]
testwiz = ['src/testwiz/core/queries/*.scm']
